# hgrade

./: README.md  hgrade.cabal  studentinfo.txt
__MACOSX/: ._data
__MACOSX/data/: ._author1  ._author2  ._author3  ._author4
__MACOSX/data/author1/: ._grader1.txt  ._grader2.txt
__MACOSX/data/author2/: ._grader1.txt  ._grader2.txt  ._grader3.txt
__MACOSX/data/author3/: ._grader2.txt
__MACOSX/data/author4/: ._grader1.txt  ._grader2.txt  ._grader3.txt  ._grader4.txt
app/: Main.hs
data/anna/: ganz.txt
data/author1/: grader1.txt  grader2.txt
data/author2/: grader1.txt  grader2.txt  grader3.txt
data/author3/: grader2.txt
data/author4/: grader1.txt  grader2.txt  grader4.txt
data/marc/: peter.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.8.4/: hgrade-0.1.0.0-inplace.conf  package.cache
grading/: README.md  grading.csv
lib/: Authors.hs  Evaluation.hs  Grade.hs  Hgrade.hs  Index.hs
lib/Hgrade/: Criteria.hs  Example.hs  HtmlGenerator.hs
static/: index.html
test/: HgradeTest.hs
