cabal-version:       3.0

name:                hgrade
version:             0.1.0.0
build-type:          Simple

common common-properties
  default-language: Haskell2010
  build-depends:
    base >=4.13 && <5
   ,scotty ==0.12
   ,wai-extra ==3.1.2
   ,directory ==1.3.6.1
   ,transformers
   ,text >=1.2.3
   ,random ==1.2.0
  ghc-options:
    -Wall

library
  import:              common-properties
  exposed-modules:     Hgrade, Hgrade.HtmlGenerator, Index, Authors, Grade, Evaluation, Hgrade.Criteria
  -- other-modules:
  -- other-extensions:
  build-depends:       
  hs-source-dirs:      lib

executable hgrade
  import:              common-properties
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       hgrade
  hs-source-dirs:      app
  ghc-options: -threaded -rtsopts 

test-suite hgrade-test
  import:              common-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HgradeTest.hs
  build-depends:       tasty >= 1.3
                     , tasty-hunit 
                     , hgrade 
